removed /book page, redirect to landing hero, removed "share via email" button, removed "loading recommended speakers" section on enquiry review, made "custom why" more readable on speaker cards (waiting for marco's comment), made event name required and non skippable, designed speakers page, fixed landing's hero cue "world-class", addressed some minor marco's comments

--- a/src/pages/HomePage/components/Hero/Hero.css
+++ b/src/pages/HomePage/components/Hero/Hero.css
@@ -116,7 +116,7 @@
 }
 
 .hero__cue {
-  width: 500px;
+  width: 550px;
   margin: 0 auto 28px;
   font-size: 1rem;
   line-height: 1.2;
